--- a/frontend/src/components/PageSections/ReviewSection/Review/Review.css
+++ b/frontend/src/components/PageSections/ReviewSection/Review/Review.css
@@ -11,7 +11,6 @@
 .Review .Stars {
     font-size: 1.5rem;
     font-weight: bold;
-    margin-left: 10px;
     vertical-align: middle;
 }
 
@@ -34,4 +33,8 @@
 .Review:not(:first-of-type) {
     padding-top: 20px;
     border-top: 1px dashed rgb(194, 194, 194);
+}
+
+.reviewHeader {
+    padding: 10px;
 }
