--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import './assets/colors.css';
+
 body {
   margin: 0;
   font-family: 'Raleway',sans-serif;
@@ -10,4 +12,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a, a:visited {
+  color: var(--black85);
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #e6e6e6;
 }
