--- a/frontend/src/components/SubsectionNewButton/SubsectionNewButton.scss
+++ b/frontend/src/components/SubsectionNewButton/SubsectionNewButton.scss
@@ -1,16 +1,18 @@
+@import '../../assets/colors.css';
+
 .SubsectionNewButton {
     padding: 6px;
     font-family: 'Raleway', sans-serif;
     font-size: 1rem;
-    background-color: #8BACBD;
+    background-color: var(--new-green);
     min-width: 25%;
     max-width: 480px;
     margin: 15px auto;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
 .SubsectionNewButton:hover {    
-    background-color: rgb(105, 130, 143);
+    background-color: var(--new-green-hover);
 }
