Lots of changes, I don't remember what, WIP

--- a/frontend/src/components/pages/create/NewNodeButton/NewNodeButton.css
+++ b/frontend/src/components/pages/create/NewNodeButton/NewNodeButton.css
@@ -10,6 +10,9 @@
     cursor: pointer;
 }
 
+@import '../../../../assets/fonts.css';
+
+
 .NewNodeButton:hover {
     background-color: rgb(105, 130, 143);
 }
