--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,8 @@
 @import './assets/colors.css';
+@import './assets/fonts.css';
 
 body {
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
