Attachment display start

--- a/frontend/src/assets/colors.css
+++ b/frontend/src/assets/colors.css
@@ -9,4 +9,5 @@
     --off-white: #f7f7f7;
     --off-white-darker: #e8e8e8;
     --off-white-darker-still: #d9d9d9;
+    --off-white-darker-darker: #bebebe;
 }
