--- a/frontend/src/components/PageSections/TopSection/TopSection.scss
+++ b/frontend/src/components/PageSections/TopSection/TopSection.scss
@@ -1,6 +1,37 @@
 .TopSection {
     border-bottom: 2px solid rgb(165, 165, 165);
     display: flex;
+
+    textarea {
+        display: block;
+        width: 100%;
+        font-size: 0.9rem;
+        height: auto;
+    }
+
+    .newTagButton {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .descriptionButtons {
+        margin-top: 8px;
+        text-align: center;
+    }
+
+    .smallButton {
+        border: none;
+        display: inline-block;
+        text-decoration: none;
+        color: var(--black85);
+        vertical-align: middle;
+        font-size: 0.8rem;
+        padding: 4px 4px;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        margin: 0 auto;
+    }
 }
 
 .TopSection .text {
@@ -25,6 +56,12 @@
 .TopSection .nodeText {
     margin: 15px;
     font-size: 0.95rem;
+    width: 95%;
+
+    .description {
+        width: 99%;
+        margin: 0 auto;
+    }
 }
 
 @media screen and (max-width: 1079px) {
