Add sessions on schedule page

--- a/frontend/src/components/NewNodeModal/NewNodeModal.scss
+++ b/frontend/src/components/NewNodeModal/NewNodeModal.scss
@@ -10,6 +10,9 @@
     // select {
     //     padding: 3px;
     // }
+    .allNodeSection {
+        margin-top: 20px;
+    }
 
     .nodeTypeSection {
         margin-top: 20px;
