--- a/frontend/src/components/NewNodeModal/NewNodeModal.scss
+++ b/frontend/src/components/NewNodeModal/NewNodeModal.scss
@@ -5,14 +5,15 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    min-height: 450px;
+    min-height: 500px;
 
     // select {
     //     padding: 3px;
     // }
     .allNodeSection {
         margin-top: 20px;
-        max-width: 70%;
+        width: 80%;
+        align-self: center;
 
         select {
             width: 100%;
@@ -28,7 +29,25 @@
     }
 
     .sessionTimeSection {
-        margin-top: 20px;
+        margin: 20px;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+
+        input {
+            padding: 5px;
+            font-family: 'Raleway', sans-serif;
+            text-align: center;
+            font-size: 0.9rem;
+        }
+
+        span {
+            margin: 0 20px;
+        }
+
+        h4 {
+            margin: 0;
+        }
     }
 
     .react-datetime-picker {
@@ -101,7 +120,7 @@
 
     textarea {
         width: 100%;
-        height: 100px;
+        height: 150px;
         margin-bottom: 20px;
     }
 
