--- a/frontend/src/components/childElements/Attachment/Attachment.scss
+++ b/frontend/src/components/childElements/Attachment/Attachment.scss
@@ -32,6 +32,19 @@
         margin: 5px;
     }
 
+    button {
+        font-size: 1.2rem;
+        border: none;
+        padding: 5px;
+        margin: 5px;
+        background-color: white;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: var(--off-white-darker);
+    }
+
     .nonImageImage{
         height: 100px;
         opacity: 0.4;
