No idea what all these changes are, it's been a year since I touched this

--- a/frontend/src/components/NewNodeModal/NewNodeModal.scss
+++ b/frontend/src/components/NewNodeModal/NewNodeModal.scss
@@ -20,6 +20,10 @@
         }
     }
 
+    .categorySection {
+        width: 80%;
+    }
+
     .nodeTypeSection {
         margin-top: 20px;
     }
