--- a/frontend/src/components/PageSections/TopSection/TopSection.scss
+++ b/frontend/src/components/PageSections/TopSection/TopSection.scss
@@ -61,6 +61,10 @@
     .description {
         width: 99%;
         margin: 0 auto;
+
+        pre {
+            overflow: scroll;
+        }
     }
 }
 
