--- a/frontend/src/components/pages/tasks/TaskPage/TaskPage.scss
+++ b/frontend/src/components/pages/tasks/TaskPage/TaskPage.scss
@@ -1,4 +1,5 @@
 .TaskPage {
+    padding-bottom: 20px;
     h1 {
         margin: 0;
         padding: 20px 20px;
@@ -22,5 +23,12 @@
 
     .sortableTask ~ .sortableTask {
         border-top: none;
+    }
+
+    .SubsectionNewButton {
+        display: block;
+        margin: 0 auto;
+        width: 75%;
+        margin-top: 20px;
     }
 }
