Disable horizontal images for now

--- a/frontend/src/components/PageSections/TopSection/VerticalImageSection/VerticalImageSection.scss
+++ b/frontend/src/components/PageSections/TopSection/VerticalImageSection/VerticalImageSection.scss
@@ -20,13 +20,13 @@
     }
 }
 
-@media screen and (max-width: 1079px) {
-    .verticalImage {
-        display: none;
-    }
+// @media screen and (max-width: 1079px) {
+//     .verticalImage {
+//         display: none;
+//     }
     
-    .horizontalImage {
-        display: block !important;
-        text-align: center;
-    }
-  }
+//     .horizontalImage {
+//         display: block !important;
+//         text-align: center;
+//     }
+//   }
