--- a/frontend/src/components/PageSections/TopSection/TopSection.scss
+++ b/frontend/src/components/PageSections/TopSection/TopSection.scss
@@ -68,14 +68,14 @@
     }
 }
 
-@media screen and (max-width: 1079px) {
-    .TopSection {
-        flex-direction: column;
-    }
+// @media screen and (max-width: 1079px) {
+//     .TopSection {
+//         flex-direction: column;
+//     }
 
-    .text {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-  }
+//     .text {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//     }
+//   }
