--- a/frontend/src/components/pages/tasks/TaskPage/TaskLine/TaskLine.scss
+++ b/frontend/src/components/pages/tasks/TaskPage/TaskLine/TaskLine.scss
@@ -25,6 +25,7 @@
         margin-left: 30px;
         font-size: 0.8rem;
         color: grey;
+        display: none;
     }
 
     .taskCategory {
